--- a/scss/components/navigation.scss
+++ b/scss/components/navigation.scss
@@ -125,13 +125,6 @@
 
 					}
 				}
-				@include media-breakpoint-up(xxl) {
-					.nav-link-desc {
-						width:        80%;
-						margin-right: 20%;
-					}
-				}
-
 			}
 		}
 	}
